--- a/Akinator/templates/interface/prediction.html
+++ b/Akinator/templates/interface/prediction.html
@@ -148,7 +148,7 @@
             }
 
             const pokeTable = JSON.parse('{{ poke_table_json|escapejs }}');
-
+            console.log('pokeTable:', pokeTable);
             $(function () {
             var audioBtn = $(".audio_button"),
                 audioWrap = $(".audio_wrap"),
